# mridangam-sts

./: .gitignore  README.md  experiment.ipynb  experiment.py  pyproject.toml
mridangam/: data.py  loss.py  models.py  tasks.py
